Revert "Merge branch 'feature/transaction_tracing/MGX-1223' into main"
This reverts commit ad7d2985135d05ee1d5d0a91059fce6f3cdbb9a7, reversing
changes made to 6e53f6bcc6f7405e0987c9d80529d24b2cfd495a.
