# stash/src/app.ts
@@ -14,7 +14,6 @@ import * as liquidStakingController from './controller/liquidStakingController.j
 import * as networkController from './controller/networkController.js'
 import * as tokenNetworkPortfolioController from './controller/tokenNetworkPortfolioController.js'
 import * as faucetController from './controller/FaucetController.js'
-import * as tracingController from './controller/TracingController.js'
 
 import { createRequire } from 'module'
 const require = createRequire(import.meta.url)
@@ -88,41 +87,17 @@ app.get(
 app.get('/coingecko/pairs', coingeckoController.pairs)
 app.get('/coingecko/tickers', coingeckoController.tickers)
 
-app.get('/affirmed-network/list', networkController.networkList)
-app.get('/affirmed-token/list', networkController.tokenList)
-app.get(
-  '/account/:address/token-portfolio',
-  tokenNetworkPortfolioController.tokenNetworkPortfolio
-)
+  app.get('/affirmed-network/list', networkController.networkList)
+  app.get('/affirmed-token/list', networkController.tokenList)
+  app.get(
+    '/account/:address/token-portfolio',
+    tokenNetworkPortfolioController.tokenNetworkPortfolio
+  )
 
 //Faucet endpoint
 app.get(
   '/faucet/requestTokens/:toAddress/captcha/:captcha/',
   faucetController.captcha
-)
-
-// Tracing endpoints
-app.post('/tracing/tx/start', tracingController.startTracing)
-
-app.get(
-  '/tracing/tx/:txHashOrEntityId',
-  tracingController.getTransactionStatusByTxHashOrEntityId
-)
-
-app.get(
-  '/tracing/tx/listByAddress/:address',
-  tracingController.getAllTransactionsByAddress
-)
-
-app.get(
-  '/tracing/tx/listByAddress/:address/:status',
-  tracingController.getAllTransactionsByAddressAndStatus
-)
-
-app.get(
-  '/tracing/tx/findByEntityId/:entityId',
-
-  tracingController.getATransactionByEntityId
 )
 
 // Coinmarketcap listing endpoints
